# undistortx

./: CMakeLists.txt  README.md
container/: Dockerfile  spawn.sh
sources/: geometry.h  main.cpp  types.h  undistortion.cpp  undistortion.h
tests/: test.cpp  test_geometry.cpp  test_undistortion.cpp
tests/data/: 1.yaml  2.yaml  3.yaml
